src/objects/CPQ_Conga__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Quote_Lines_Query_Id__c</fullName>
        <label>Quote Lines Query Id</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Lines_Template_Id__c</fullName>
        <label>Quote Lines Template Id</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Query_Id__c</fullName>
        <label>Quote Query Id</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <label>CPQ Conga</label>
</CustomObject>